# trackdot

./: .gitignore  .gitmodules
src/aeva_msgs/: package.xml
src/atlas_driver/: CMakeLists.txt  package.xml
src/atlas_driver/launch/: atlas.launch.py
src/atlas_driver/src/: ros2_aeva_publisher.cc
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: data_collection_params.yaml
src/bringup/launch/: data_collection.launch.py  sensors_only.launch.py
src/bringup/scripts/: setup_network.sh
src/calibration/: CMakeLists.txt  package.xml
src/calibration/config/: h3_tf.yaml  triton_left_tf.yaml
src/calibration/launch/: static_tf.launch.py
src/camera_detector/: CMakeLists.txt  package.xml
src/camera_detector/config/: detector_config.yml  pgie_config.yml  pipeline_source.yml  sgie_config.yml
src/camera_detector/launch/: camera_detector.launch.py  camera_detector_dev.launch.py
src/camera_detector/scripts/: viz_overlay.py
src/camera_detector/src/: camera_detector_node.cpp  nvdsinfer_custom_impl.cpp  nvdsinfer_custom_impl_sgie.cpp
src/gnss_driver/: package.xml  setup.py
src/gnss_driver/config/: gnss_params.yaml
src/gnss_driver/gnss_driver/: gnss_driver_node.py
src/gnss_driver/launch/: gnss.launch.py
src/lidar_cam_fusion/: CMakeLists.txt  README.md  overlay_config.yaml  package.xml
src/lidar_cam_fusion/launch/: overlay.launch.py
src/lidar_cam_fusion/src/: lidar_camera_overlay_node.cpp
src/ros2_aeva_publisher/: CMakeLists.txt  package.xml
src/trackdot_msgs/: CMakeLists.txt  package.xml
src/trackdot_msgs/msg/: VehicleDetection.msg  VehicleDetectionArray.msg
