<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_driver</name>
  <version>0.1.0</version>
  <description>
    CSS Electronics CANmod.GPS driver for ROS 2.
    Reads directly over USB via python-can's csscan_serial interface.
    No MQTT, no slcand, no kernel module required.
  </description>

  <maintainer email="bharatwrrr@gmail.com">Bharat Jayaprakash</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- python-can and cantools are pip packages, not ROS packages.
       Install them with:  pip install python-can cantools          -->
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python-can</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>cantools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
